samples/_failures_safe/1761341538_b2c590_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e497d416.c: In function ‘main’:
./samples/SAFE/__tmp_e497d416.c:202:16: error: expected ‘;’ at end of input
  202 |         fprintf
      |                ^
      |                ;
./samples/SAFE/__tmp_e497d416.c:202:9: error: expected declaration or statement at end of input
  202 |         fprintf
      |         ^~~~~~~
./samples/SAFE/__tmp_e497d416.c:202:9: error: expected declaration or statement at end of input
